@startuml N123

class Cliente {
    -nome: str
    -cpf: str
    -telefone: str
    -saldo: float
    -cartao_credito: str
    -idade: int
    +depositar_saldo(valor)
    +comprar_ingresso(sessao: Sessao, qtd_ingressos)
    +construtor(nome, cpf, telefone, saldo, cartao_credito, idade)
}

class Filme {
    -nome: str
    -duracao: str
    -genero: str
    -classificacao: str
    +construtor(nome, duracao, genero, classificacao)
}

class Sessao {
    -filme: Filme
    -horario: str
    -preco: float
    -ingressos_disponiveis: int
    -ingressos_vendidos: int
    -clientes: list[Cliente]
    ++construtor(filme: Filme, horario, preco, ingressos_disponiveis, ingressos_vendidos, clientes)
    +vender_ingressos(qtd)
    +adicionar_cliente(cliente)
}

Cliente --> Sessao
Sessao --> Filme

@enduml
